# constructor

./: .authors.yml  .buildinfo  .coveragerc  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  AUTHORS.txt  CHANGELOG.md  CHANGELOG.rst  CHANGELOG.txt  CODE_OF_CONDUCT.md  CONSTRUCT.md  CONTRIBUTING.md  HOW_WE_USE_GITHUB.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  appveyor.yml  codecov.yml  construct_yaml.html  creating-installers.html  default.profraw  genindex.html  index.html  keys.md  objects.inv  pyproject.toml  rever.xsh  search.html  searchindex.js  setup.cfg  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  TEST_FAILURE_REPORT_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  2_documentation.yml  epic.yml
.github/template-files/: config.yml
.github/workflows/: cla.yml  docs.yml  issues.yml  labels.yml  lock.yml  main.yml  project.yml  stale.yml  update.yml
conda.recipe/: bld.bat  build.sh  meta.yaml
conda_constructor/: main.py  shar.py  test.py  winexe.py
conda_constructor/nsis/: _nsis.py  _system_path.py
constructor/: __init__.py  __main__.py  _schema.py  _version.py  briefcase.py  build_outputs.py  common.py  conda_interface.py  conda_ship.py  construct.py  docker_build.py  dockerfile_template.tmpl  exceptions.py  fcp.py  fpip.py  header.sh  imaging.py  install.py  jinja.py  main.py  osxpkg.py  post.py  preconda.py  shar.py  signing.py  test.py  toolz.py  utils.py  winexe.py
constructor/briefcase/: pre_uninstall.bat  run_installation.bat
constructor/data/: construct.schema.json  constructor.schema.json
constructor/nsis/: .main.nsi.tmpl.swp  MUI_EXTRAPAGES.nsh  OptionsDialog.nsh  StandaloneUninstallerOptions.nsh  (+7 more)
dev/: environment.yml  extra-requirements-macos.txt  extra-requirements-windows.txt
docs/: Makefile  environment.yml
examples/: eula.txt  grin.yaml
news/: 1005-unset-envvars-nsis  1008-mirrored-channels-schema  1011-auto-update-conda  1011-use-miniforge  1032-initialize-conda-boolean  1036-check-path-length-docs  1040-misleading-conda-init-prompt  1053-fix-type-sh  1053-fix-typo-sh  1058-add-support-for-frozen-envs  1059-lockfiles  1068-remove-obsolete-nsispy-functions  1069-port-nsispy-cmds-nsis  1073-update-win-sdk  1077-use-windows-2022  1082-unset-variables  1085-include-installer-license-file  1088-update-schema-default-value  1089-remove-python-commands  1090-mamba-standalone-fix  1090-preserve-conda-exe-filename  1094-add-guards-os-checks  1104-fix-text-in-header  1105-improve-handling-of-certain-options  1108-improve-logging  1121-repodata-cache  1124-assign-uninitialized-variables  1132-fix-cli-args  1135-fix-symbolic-linking  1141-logset-off  1145-python-test-deps  1149-add-support-for-frozen-envs  1151-installer-path-variable  1152-pre-install-script-bug  1153-macos-architecture-checks  1159-macos-conda-standalone-signing  1173-ensure-latest-conda-standalone  1174-uninstall-fix  1185-pkg-chown-permissions  1196-conda-26-fetch-latest-dict  (+183 more)
recipe/: meta.yaml
scripts/: create_self_signed_certificate.ps1  create_self_signed_certificates_macos.sh  make_docs.py  regenerate_CONSTRUCT.md.py  run_examples.py
standalone_exec/: README.md  conda.exe.py
tests/: conftest.py  extra-requirements-windows.txt  requirements.txt  test_briefcase.py  test_conda_ship.py  test_construct.py  test_debug.py  test_examples.py  test_fcp.py  test_header.py  test_imaging.py  test_install.py  test_main.py  test_outputs.py  test_preconda.py  test_signing.py  test_utils.py
(+151 files in other folders)
