[build-system]
requires = ["setuptools>=70.1", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "constructor"
description = "create installer from conda packages"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
dynamic = [
    "version",
]
dependencies = [
    "conda >=4.6",
    "ruamel.yaml >=0.11.14,<0.19",
    "pillow >=3.1 ; platform_system=='Windows' or platform_system=='Darwin'",
    "jinja2",
    "jsonschema >=4"
]

[project.optional-dependencies]
schema = ["pydantic >=2"]

[project.scripts]
constructor = "constructor.main:main"

[project.urls]
repository = "https://github.com/conda/constructor"

[tool.setuptools_scm]
write_to = "constructor/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["constructor*"]
namespaces = true

[tool.setuptools.package-data]
constructor = [
    "header.sh",
    "nsis/*",
    "osx/*",
    "ttf/*",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "examples",
]
